# MeloTrip

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  WORKPLAN.md  analysis_options.yaml  l10n.yaml  pubspec.yaml
.gitea/workflows/: flutter-ci.yml  release-apk.yml
.github/workflows/: flutter-ci.yml  release-apk.yml
android/: key.properties.example
android/app/: build.gradle  build.gradle.kts
docs/: ARCH_REVIEW.md  ENGINEERING_LESSONS.md  QUALITY_MILESTONES.md
docs/recommendation/: navidrome_recommendation_p0_acceptance.md  navidrome_recommendation_p1_design.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/app_logic/: android_apk_installer.dart  api_interceptor.dart  app_runtime_coordinator.dart  app_update_service.dart  desktop_lyrics_runtime.dart  play_queue_restore.dart  player_listener.dart
lib/app_player/: command_serializer.dart  duck_volume_state_machine.dart  interruption_side_effect_serializer.dart  interruption_state.dart  media_extras_codec.dart  player.dart
lib/const/: index.dart
lib/helper/: ai_provider_logo.dart  app_failure_log.dart  app_failure_message.dart  build_subsonic_url.dart  cache_file_path.dart  cache_file_path_impl_io.dart  cache_file_path_impl_stub.dart  duration_formatter.dart  file_size_formatter.dart  index.dart  index_of_lyrics.dart  lyrics_timeline.dart  subsonic_protocol.dart  subsonic_uri_builder.dart
lib/l10n/: app_en.arb  app_localizations.dart  (+5 more)
linux/: CMakeLists.txt  my_application.cc
plugins/desktop_lyrics/linux/: CMakeLists.txt  desktop_lyrics_overlay.cc  desktop_lyrics_overlay.h  desktop_lyrics_overlay_render.cc  desktop_lyrics_plugin.cc
plugins/desktop_lyrics/linux/include/desktop_lyrics/: desktop_lyrics_plugin.h
plugins/update_installer/windows/: CMakeLists.txt  update_installer_plugin.cpp  update_installer_plugin.h  update_installer_plugin_c_api.cpp  update_installer_plugin_internal.cpp  update_installer_plugin_internal.h
plugins/update_installer/windows/include/update_installer/: update_installer_plugin_c_api.h
plugins/update_installer/windows/test/: update_installer_plugin_test.cpp
plugins/update_installer/windows/updater/: updater_main.cpp  updater_operations.cpp  updater_shared.h  updater_ui_render.cpp  updater_ui_resources.cpp  updater_window.cpp
plugins/window_title_bar/windows/: CMakeLists.txt  window_title_bar_plugin.cpp  window_title_bar_plugin.h  window_title_bar_plugin_c_api.cpp
plugins/window_title_bar/windows/include/window_title_bar/: window_title_bar_plugin_c_api.h
test/: album_detail_page_test.dart  api_provider_test.dart  app_global_error_message_contract_test.dart  app_player_command_serializer_test.dart  app_runtime_coordinator_test.dart  app_update_models_test.dart  app_update_service_test.dart  configuration_json_test.dart  desktop_home_page_test.dart  desktop_library_pages_test.dart  desktop_lyrics_settings_provider_test.dart  desktop_lyrics_settings_tab_test.dart  desktop_playlist_pages_test.dart  desktop_search_command_palette_test.dart  desktop_search_page_test.dart  desktop_settings_page_test.dart  duck_volume_state_machine_test.dart  error_mapping_unified_contract_test.dart  gesture_hint_test.dart  helper_duration_formatter_test.dart  helper_file_size_formatter_test.dart  initial_bootstrap_service_test.dart  initial_page_ui_test.dart  interruption_race_test.dart  interruption_serializer_test.dart  interruption_side_effect_test.dart  interruption_state_test.dart  l10n_smoke_test.dart  lyrics_merge_test.dart  lyrics_model_converter_test.dart  lyrics_timeline_helpers_test.dart  media_item_mapping_test.dart  mobile_home_page_test.dart  mobile_playlist_error_flow_test.dart  model_response_json_test.dart  model_response_more_json_test.dart  navigation_smoke_test.dart  play_queue_insert_logic_test.dart  play_queue_restore_test.dart  play_queue_scroll_offset_test.dart  (+18 more)
tool/: verify.ps1
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+735 files in other folders)
