cmake_minimum_required(VERSION 3.13)

set(PROJECT_NAME "desktop_lyrics")
project(${PROJECT_NAME} LANGUAGES CXX)

set(PLUGIN_NAME "desktop_lyrics_plugin")

add_library(${PLUGIN_NAME} SHARED
  "desktop_lyrics_plugin.cc"
  "desktop_lyrics_overlay.cc"
  "desktop_lyrics_overlay_render.cc"
)

apply_standard_settings(${PLUGIN_NAME})

set_target_properties(${PLUGIN_NAME} PROPERTIES
  CXX_VISIBILITY_PRESET hidden
)

target_compile_definitions(${PLUGIN_NAME} PRIVATE FLUTTER_PLUGIN_IMPL)

target_include_directories(${PLUGIN_NAME} INTERFACE
  "${CMAKE_CURRENT_SOURCE_DIR}/include"
)

target_link_libraries(${PLUGIN_NAME} PRIVATE flutter)

set(desktop_lyrics_bundled_libraries "" PARENT_SCOPE)
